// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputRadios > displays error message > expected html 1`] = `
<div>
  <fieldset
    data-testid="input-radios-it"
    id="input-radios-it"
  >
    <legend
      class="block mb-2"
      id="input-radios-it-legend"
    >
      <span
        class="font-semibold"
      >
        Test Legend
      </span>
    </legend>
    <p
      class="mb-2"
    >
      <span
        class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
        data-testid="input-error-test-id"
        id="input-radios-it-error"
        role="alert"
      >
        Test Error Message
      </span>
    </p>
    <ul
      class="space-y-2"
    >
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-errormessage="input-radios-it-error"
              aria-invalid="true"
              aria-labelledby="input-radio-it-option-0-label"
              class="size-5 bg-gray-50 focus:ring-2 focus:outline-hidden border-red-500 text-red-700 focus:border-red-500 focus:ring-red-500"
              data-testid="input-radio"
              id="input-radio-it-option-0"
              name="it"
              type="radio"
              value="option1"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-0"
              id="input-radio-it-option-0-label"
            >
              Option 1
            </label>
          </div>
        </div>
      </li>
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-errormessage="input-radios-it-error"
              aria-invalid="true"
              aria-labelledby="input-radio-it-option-1-label"
              class="size-5 bg-gray-50 focus:ring-2 focus:outline-hidden border-red-500 text-red-700 focus:border-red-500 focus:ring-red-500"
              data-testid="input-radio"
              id="input-radio-it-option-1"
              name="it"
              type="radio"
              value="option2"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-1"
              id="input-radio-it-option-1-label"
            >
              Option 2
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`InputRadios > displays helpMessagePrimary > expected html 1`] = `
<div>
  <fieldset
    data-testid="input-radios-it"
    id="input-radios-it"
  >
    <legend
      class="block mb-2"
      id="input-radios-it-legend"
    >
      <span
        class="font-semibold"
      >
        Test Legend
      </span>
    </legend>
    <span
      class="block max-w-prose text-gray-500 mb-2"
      data-testid="input-field-help-primary-it"
      id="input-radios-it-help-primary"
    >
      Primary help message
    </span>
    <ul
      class="space-y-2"
    >
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-describedby="input-radios-it-help-primary"
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-0-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-0"
              name="it"
              type="radio"
              value="option1"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-0"
              id="input-radio-it-option-0-label"
            >
              Option 1
            </label>
          </div>
        </div>
      </li>
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-describedby="input-radios-it-help-primary"
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-1-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-1"
              name="it"
              type="radio"
              value="option2"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-1"
              id="input-radio-it-option-1-label"
            >
              Option 2
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`InputRadios > displays helpMessageSecondary > expected html 1`] = `
<div>
  <fieldset
    data-testid="input-radios-it"
    id="input-radios-it"
  >
    <legend
      class="block mb-2"
      id="input-radios-it-legend"
    >
      <span
        class="font-semibold"
      >
        Test Legend
      </span>
    </legend>
    <ul
      class="space-y-2"
    >
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-describedby="input-radios-it-help-secondary"
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-0-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-0"
              name="it"
              type="radio"
              value="option1"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-0"
              id="input-radio-it-option-0-label"
            >
              Option 1
            </label>
          </div>
        </div>
      </li>
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-describedby="input-radios-it-help-secondary"
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-1-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-1"
              name="it"
              type="radio"
              value="option2"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-1"
              id="input-radio-it-option-1-label"
            >
              Option 2
            </label>
          </div>
        </div>
      </li>
    </ul>
    <span
      class="block max-w-prose text-gray-500 mt-2"
      data-testid="input-field-help-secondary-it"
      id="input-radios-it-help-secondary"
    >
      Secondary help message
    </span>
  </fieldset>
</div>
`;

exports[`InputRadios > renders component with legend and options > expected html 1`] = `
<div>
  <fieldset
    data-testid="input-radios-it"
    id="input-radios-it"
  >
    <legend
      class="block mb-2"
      id="input-radios-it-legend"
    >
      <span
        class="font-semibold"
      >
        Test Legend
      </span>
    </legend>
    <ul
      class="space-y-2"
    >
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-0-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-0"
              name="it"
              type="radio"
              value="option1"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-0"
              id="input-radio-it-option-0-label"
            >
              Option 1
            </label>
          </div>
        </div>
      </li>
      <li>
        <div>
          <div
            class="flex items-center"
          >
            <input
              aria-invalid="false"
              aria-labelledby="input-radio-it-option-1-label"
              class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
              data-testid="input-radio"
              id="input-radio-it-option-1"
              name="it"
              type="radio"
              value="option2"
            />
            <label
              class="block pl-3 leading-6"
              for="input-radio-it-option-1"
              id="input-radio-it-option-1-label"
            >
              Option 2
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;
